--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,11 @@
+
 body {
     margin: 0;
     padding: 0;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff6ad5+0,ad8cff+48,94d0ff+100 */
+    background: #ff6ad5; /* Old browsers */
+    background: -moz-linear-gradient(top, #ff6ad5 0%, #ad8cff 48%, #94d0ff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ff6ad5 0%,#ad8cff 48%,#94d0ff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ff6ad5 0%,#ad8cff 48%,#94d0ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6ad5', endColorstr='#94d0ff',GradientType=0 ); /* IE6-9 */
 }
